thin scrollbar and fix initial read loading (still needs remade)

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -44,6 +44,7 @@ main {
 #content {
     position: relative;
     overflow-y: scroll;
+    scrollbar-width: thin;
 }
 nav, #content, aside {
     padding: 10px;
